clean up; remove puzzlePDB; modify README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
 add_executable(project main.cpp searchAlgorithm.h
-        puzzle.cpp puzzle.h puzzlePDB.cpp puzzlePDB.h
-        minHeap.h util.cpp util.h grid.cpp grid.h salesman.cpp salesman.h)
+        puzzle.cpp puzzle.h grid.cpp grid.h salesman.cpp salesman.h
+        minHeap.h util.cpp util.h)
 add_executable(parsing output-parsing.cpp util.cpp util.h)
 
 target_link_libraries(project Threads::Threads)
